@@ -1,9 +1,8 @@
-from batou.component import Component
-from batou.utils import Attribute
+from batou.component import Component, Attribute
 
 
 class ZEO(Component):
 
-    port = Attribute(int, 9001)
+    port = Attribute(int, '9001')
 
     features = ['test', 'test2']
